Minor rearrangement for readability

--- a/tip/477.md
+++ b/tip/477.md
@@ -10,8 +10,8 @@
 <!-- TOC BEGIN -->
 * <a href='#toc-2'>Abstract</a>
 * <a href='#toc-3'>Background and Rationale</a>
-    * <a href='#toc-4'>Avoiding duplication of code</a>
-    * <a href='#toc-5'>Simplifying extension makefiles</a>
+    * <a href='#toc-4'>Simplifying extension makefiles</a>
+    * <a href='#toc-5'>Ensuring consistency</a>
     * <a href='#toc-6'>Auditing compiler configuration</a>
     * <a href='#toc-7'>Non-goals</a>
 * <a href='#toc-8'>Command line interface</a>
@@ -25,28 +25,34 @@
     * <a href='#toc-16'>The `rules.vc` file</a>
     * <a href='#toc-17'>The `targets.vc` file</a>
     * <a href='#toc-18'>Distributing the nmake build system</a>
-* <a href='#toc-19'>Locating Tcl</a>
-* <a href='#toc-20'>Locating Tk</a>
-* <a href='#toc-21'>Customizing and extending the build environment</a>
-    * <a href='#toc-22'>Location of extension sources and implicit rules</a>
-    * <a href='#toc-23'>Output directories and file names</a>
-    * <a href='#toc-24'>Implicit rules</a>
-    * <a href='#toc-25'>Compiler and link flags</a>
-    * <a href='#toc-26'>Windows resource files</a>
-    * <a href='#toc-27'>Generating pkgIndex.tcl</a>
-    * <a href='#toc-28'>Targets</a>
-        * <a href='#toc-29'>The default target</a>
-        * <a href='#toc-30'>Predefined targets</a>
-        * <a href='#toc-31'>Standard targets</a>
-        * <a href='#toc-32'>Extending targets</a>
-        * <a href='#toc-33'>Ignoring standard targets</a>
-    * <a href='#toc-34'>Stubs</a>
-    * <a href='#toc-35'>Versioning</a>
-    * <a href='#toc-36'>Installation</a>
-    * <a href='#toc-37'>Utility macros</a>
-    * <a href='#toc-38'>Sanity checking build configuration</a>
-* <a href='#toc-39'>Reference Implementation</a>
-* <a href='#toc-40'>Copyright</a>
+* <a href='#toc-19'>Locating headers and libraries</a>
+    * <a href='#toc-20'>Locating Tcl</a>
+    * <a href='#toc-21'>Locating Tk</a>
+* <a href='#toc-22'>Customizing and extending the build environment</a>
+    * <a href='#toc-23'>Location of extension sources and implicit rules</a>
+    * <a href='#toc-24'>Output directories and file names</a>
+    * <a href='#toc-25'>Implicit rules</a>
+    * <a href='#toc-26'>Compiler configuration</a>
+        * <a href='#toc-27'>Compiler flags and switches</a>
+        * <a href='#toc-28'>Passing additional compiler switches</a>
+    * <a href='#toc-29'>Linker flags</a>
+    * <a href='#toc-30'>Windows resource files</a>
+    * <a href='#toc-31'>Generating pkgIndex.tcl</a>
+    * <a href='#toc-32'>Targets</a>
+        * <a href='#toc-33'>The default target</a>
+        * <a href='#toc-34'>Predefined targets</a>
+        * <a href='#toc-35'>Standard targets</a>
+        * <a href='#toc-36'>Extending targets</a>
+        * <a href='#toc-37'>Ignoring standard targets</a>
+    * <a href='#toc-38'>Stubs</a>
+    * <a href='#toc-39'>Versioning</a>
+    * <a href='#toc-40'>Installation</a>
+    * <a href='#toc-41'>Manifests</a>
+    * <a href='#toc-42'>Documentation and demos</a>
+    * <a href='#toc-43'>Utility macros</a>
+    * <a href='#toc-44'>Sanity checking build configuration</a>
+* <a href='#toc-45'>Reference Implementation</a>
+* <a href='#toc-46'>Copyright</a>
 
 <!-- TOC END -->
 
@@ -82,7 +88,37 @@ duplication of code making maintenance difficult, unnecessarily
 verbose extension makefiles, and inconsistent application of compiler
 options.
 
-## <a id='toc-4'></a>Avoiding duplication of code
+## <a id='toc-4'></a>Simplifying extension makefiles
+
+In addition, creating a `makefile.vc` for even a simple extension
+involves a lot of unnecessary boilerplate leading to
+copy-n-paste-itis and attendant problems. 
+This TIP aims to simplify the writing of extension
+makefiles to a minimalist form that reduces the boilerplate to
+extension-specific configuration.
+
+The following makefile should suffice for the majority of extensions.
+
+>
+	PROJECT=sample
+	!include "rules-ext.vc"
+	PRJ_OBJS = $(TMP_DIR)\sample.obj \
+	               $(TMP_DIR)\util.obj
+	!include "targets.vc"
+	pkgindex: default-pkgindex
+
+(In contrast, the current makefile for the sample extension is
+of the order of **300** lines, excluding comments.)
+
+Outside of the makefile itself,
+the TIP also proposes removing the burden from the extension
+author of having to write their own Windows version resource file, 
+`pkgIndex.tcl` and other common boilerplate.
+
+For more complex extensions, the build system should be incrementally
+customizable using standard "building block" macros.
+
+## <a id='toc-5'></a>Ensuring consistency
 
 In principle, `rules.mk` and `nmakehlp.c` should be shared across Tcl,
 Tk and all extensions. In practice, each has its own copy leading to
@@ -94,41 +130,14 @@ configuration (e.g. -DUNICODE) do not make their way into extensions.
 Moreover, making fixes involves individually fixing extensions, some
 of which are orphaned.
 
-The first goal is therefore to *allow each extension, including Tk,
-to be built off Tcl's master copy (either installed or from source)
-without having to maintain its own*.
+The TIP proposes distribution of the nmake support files so that
+each extension, including Tk, is
+built off Tcl's master copy (either installed or from source)
+without having to maintain its own.
 
-## <a id='toc-5'></a>Simplifying extension makefiles
-
-In addition, creating a `makefile.vc` for even a simple extension
-involves a lot of unnecessary boilerplate leading to
-copy-n-paste-itis and attendant problems. For the vast majority
-of "standard" extensions, implicit rules, standard targets,
-installation etc. should be automatically handled. Ideally, the
-`makefile.vc` should specify only the project name and list of object
-files. All else should be automatically taken care off.
-
-Thus, a secondary goal is to *simplify the writing of extension
-makefiles to a minimalist form that reduces the boilerplate to
-extension-specific configuration*.
-
-The following makefile should suffice to build DLL,
-static and debug versions of an extension with standard targets
-like `install`, `clean` etc. It will also automatically perform
-ancillary tasks such as embedding a Windows version resource in
-the generated binary without the extension writer having to
-write a resource definition file.
-
->
-	PROJECT=sample
-	!include "rules-ext.vc"
-	PRJ_OBJS = $(TMP_DIR)\sample.obj \
-	               $(TMP_DIR)\util.obj
-	!include "targets.vc"
-	pkgindex: default-pkgindex
-
-For more complex extensions, the build system should be incrementally
-customizable using "building blocks".
+This not only ensures consistency but also reduces the burden on
+extension authors to maintain their makefiles to keep up with Tcl and
+Microsoft compiler changes.
 
 ## <a id='toc-6'></a>Auditing compiler configuration
 
@@ -146,12 +155,16 @@ ensure consistency across build configurations*.
 
 It is not the intent of this TIP to look at alternatives to
 nmake. There is already the TEA based system for those who prefer to
-use it.
+use it. Sean Woods is also working on the `practcl` build tools which
+may supplant both TEA and nmake in the future.
 
 The nmake build system is not intended to be "compatible" with the TEA
 based system. For example, the generated libraries may not link with
 those generated from the other system. Of course, the built extensions
-should run with Tcl compiled from any compiler if stubs are enabled.
+should run with Tcl compiled from any compiler if stubs are
+enabled. At the same time, the nmake-ng system does make some minimal
+integration with TEA so that configuration values such as version
+numbers, `pkgIndex.tcl.in` etc. only need to be defined in one place.
 
 Certain limitations in the current nmake system, in particular
 the requirement that there be no spaces in the source directories path
@@ -384,10 +397,16 @@ every time Tcl's version of these files change.* This also allows the
 extension to be built against older versions of Tcl that do not
 include these files in their installation.
 
-# <a id='toc-19'></a>Locating Tcl
+# <a id='toc-19'></a>Locating headers and libraries
 
 Building an extension requires Tcl, and optionally Tk, header files
-and libraries. The nmake build system locates directories in the
+and libraries. 
+
+## <a id='toc-20'></a>Locating Tcl
+
+Tcl extensions need to locate either Tcl installed headers and
+libraries or the Tcl source directory.  The nmake build system locates
+the Tcl directory containing these by trying directories in the
 following order:
 
 The installation directory is specified via the `INSTALLDIR` macro on
@@ -432,7 +451,7 @@ Macro|Description
 `TCL_VERSION`|`$(TCL_MAJOR_VERSION)$(TCL_MINOR_VERSION)`
 `_TCL_H`|The path to the `tcl.h` header file.
 
-# <a id='toc-20'></a>Locating Tk
+## <a id='toc-21'></a>Locating Tk
 
 A similar method as above is used for extensions that build against Tk.
 The nmake build system locates directories in the
@@ -478,7 +497,7 @@ Macro|Description
 `TK_VERSION`|`$(TK_MAJOR_VERSION)$(TK_MINOR_VERSION)`
 `_TK_H`|The path to the `tk.h` header file.
 
-# <a id='toc-21'></a>Customizing and extending the build environment
+# <a id='toc-22'></a>Customizing and extending the build environment
 
 It is hoped that the basic makefile structure described earlier will
 suffice for the majority of extensions which follow standard conventions
@@ -507,7 +526,7 @@ These all require different levels of customization and extension and
 the nmake system tries to accomodate these with minimal effort as
 described in the following sections.
 
-## <a id='toc-22'></a>Location of extension sources and implicit rules
+## <a id='toc-23'></a>Location of extension sources and implicit rules
 
 The macro `ROOT` is set by the `rules.vc` to point to the root of the
 extension source tree. **This must be exactly one level above the
@@ -525,9 +544,10 @@ Subdirectory|Macro|Description
 `doc`|`DOCDIR`|Directory containing documentation files.
 `demos`|`DEMODIR`|Directory containing any demo files.
 `tools`|`TOOLSDIR`|Directory containing any build tools.
+`tests`|`TESTDIR`|Directory containing the test suite
 
-Only the `GENERICDIR`, `WINDIR` and `COMPATDIR` macros are used by
-`rules.vc` file and intialized to the above paths if not already
+The macros shown in the table above are
+intialized to the corresponding subdirectory names if not already
 defined by the parent makefile. Implicit rules are defined to generate
 the object files corresponding to sources in any of these
 directories. If the source directories are named differently, the
@@ -560,10 +580,7 @@ additional sources, you would add the lines below after including
 Here `cc32` and `pkgcflags` are standard macros defined within
 `rules.vc`. These are described later.
 
-The `DOCDIR`, `DEMODIR` and `TOOLSDIR` macros are only defined
-as conveniences for the parent makefile.
-
-## <a id='toc-23'></a>Output directories and file names
+## <a id='toc-24'></a>Output directories and file names
 
 Based on the options specified on the command line, compiler version
 and target architecture, the following macros are defined for
@@ -616,15 +633,89 @@ For most extension makefiles, these file names are not very relevant.
 However, they are needed when the default rules are not adequate,
 and the extension makefile needs to define its own.
 
-## <a id='toc-24'></a>Implicit rules
+## <a id='toc-25'></a>Implicit rules
 
 TBD
 
-## <a id='toc-25'></a>Compiler and link flags
+## <a id='toc-26'></a>Compiler configuration
 
-TBD
+The compiler is defined via the `cc32` macro. 
 
-## <a id='toc-26'></a>Windows resource files
+### <a id='toc-27'></a>Compiler flags and switches
+
+The flags and switches
+passed to the compiler are dependent on the build configuration such
+as whether a shared library is being built, debug options being in
+effect and so on. The `rules.vc` file defines these appropriately
+for a build configuration through the macros shown in the table below.
+
+Macro|Description
+-----|-----------
+`pkgcflags`|Compiler switches required to compile a file for an extension that will be linked against the Tcl with or without stubs depending on whether the `nostubs` option is in effect. 
+`pkgcflags_nostubs`|Compiler switches required to compile a file for an extension that will be linked against the Tcl library without using stubs.
+`appcflags`|Compiler switches required to compile a file for an application program that will be linked against the Tcl with or without stubs depending on whether the `nostubs` option is in effect.
+`appcflags_nostubs`|Compiler switches required to compile a file for an application program that will be linked against the Tcl library without using stubs.
+`stubscflags`|Compiler switches that will be used to compile objects for a extension stubs library.
+
+The `appcflags` and `appcflags_nostubs` macro includes all switches to
+be passed to the compiler to compile a source file to an object file
+to be linked into an application program. These include switches
+related to optimizations, debug information, warning levels, C runtime
+selection, C header include paths and C preprocessor definitions.
+
+The `pkgcflags` and `pkgcflags_nostubs` are similar except that they
+include additional C preprocessor definitions required by convention
+to build a binary extension. These definitions are `PACKAGE_NAME`,
+defined as the name of the package, `PACKAGE_VERSION`, set to 
+the version of the pacakge, `MODULE_SCOPE` and
+`$(PROJECT)_build`. These last two are used in the C source to
+mark DLL visibility of functions and to distinguish between definition
+and use of declaration within a C header. A further explanation is out
+of the scope of the nmake build system.
+
+The last entry in the table above, `stubscflags` is used to compile
+an extension's stubs library, if it provides one (most do not).
+
+It is strongly recommended that if extension makefiles need to define
+their own implicit or explicit rules, they make use of the above
+macros. If they need additional flags, they can be added as described
+in the next section.
+
+### <a id='toc-28'></a>Passing additional compiler switches
+
+By default, the constructed compiler flags include compiler include
+paths and preprocessor definitions common to all extensions. An
+extension may wish to extend these without having to define its own
+rules. This can be accomplished by defining the following macros 
+**before** including `rules-ext.vc`.
+
+>
+Macro|Description
+-----|-----------
+`PRJ_DEFINES`|Additional preprocessor defines
+`PRJ_INCLUDES`|Additional directories for locating C header files
+
+The contents of these macros are included in the `appcflags`,
+`pkgcflags` compiler switch macros.
+
+## <a id='toc-29'></a>Linker flags
+
+Similar to compiler switches, `rules.vc` defines standard macros,
+shown in the table below, for linking object files.
+
+>
+Macro|Description
+-----|-----------
+`link32`|Linker application name
+`dlllflags`|Switches to pass to the linker for compiling a shared library extension.
+`conlflags`|Switches to pass to the linker for compiling a console application.
+`guilflags`|Switches to pass to the linker for compiling a gui application.
+
+These flags include a standard set of libraries for linking Tcl
+extensions. If additional libraries are required, they can be
+specified by defining the `PRJ_LIBS` macro before including `rules-ext.vc`.
+
+## <a id='toc-30'></a>Windows resource files
 
 Windows programs and DLL's are expected to have a version resource 
 embedded in them though this is not mandatory. To free the extension
@@ -667,7 +758,7 @@ Note the use of `TMP_DIR` and `RCDIR` in the dependency. The
 `MAKERESCMD` macro defines the command and associated standard flags to 
 compile a resource definition file.
 
-## <a id='toc-27'></a>Generating pkgIndex.tcl
+## <a id='toc-31'></a>Generating pkgIndex.tcl
 
 The standard default `install` target expects a `pkgIndex.tcl` file to have
 been generated and placed in the `$(OUT_DIR)` output directory. It
@@ -701,9 +792,9 @@ For all other cases, the extension author needs to write their own
 target commands for `pkgindex` that results in a `pkgIndex.tcl` file
 being placed in the `$(OUT_DIR)` directory.
 
-## <a id='toc-28'></a>Targets
+## <a id='toc-32'></a>Targets
 
-### <a id='toc-29'></a>The default target
+### <a id='toc-33'></a>The default target
 
 If unspecified on the command line, the default target is assumed to be 
 `$(PROJECT)`. To change this, define the macro `DEFAULT_BUILD_TARGET`
@@ -715,7 +806,7 @@ before including `rules-ext.vc`. For example,
 Note you have to define the target yourself unless it is predefined or 
 standard.
 
-### <a id='toc-30'></a>Predefined targets
+### <a id='toc-34'></a>Predefined targets
 
 Since most extensions build commands in a similar fashion, the
 `rules.vc` file provides some predefined targets that encapsulate the
@@ -738,7 +829,7 @@ These pre-defined targets are used as building blocks by the standard
 targets described in the next section as well as potentially by
 additional custom targets defined by a makefile.
 
-### <a id='toc-31'></a>Standard targets
+### <a id='toc-35'></a>Standard targets
 
 Inclusion of the file `targets.vc` defines "standard" targets commonly
 defined in makefiles and shown in the table below. These generally
@@ -754,9 +845,10 @@ Target|Description
 `hose`|Maps to `default-hose`.
 `realclean`|Same as `hose`.
 `distclean`|Maps to `default-distclean`.
+`test`|Runs the extension test suite assuming the script `all.tcl` in `$(TESTDIR)`
+`shell`|Starts a Tcl shell with the built extension's path added to `auto_path`.
 
-
-### <a id='toc-32'></a>Extending targets
+### <a id='toc-36'></a>Extending targets
 
 In some cases, the standard targets "almost" suffice but are missing
 some additional actions. In such cases, instead of not including the
@@ -775,7 +867,7 @@ target can be extended with additional commands:
 Note `CPY`, `DOCDIR` and `DOC_INSTALL_DIR` are all predefined or
 computed macros within rules.vc.
 
-### <a id='toc-33'></a>Ignoring standard targets
+### <a id='toc-37'></a>Ignoring standard targets
 
 In the extreme case, the standard targets can be completely ignored
 by the extension makefile by not including `targets.vc`. Note the
@@ -797,13 +889,13 @@ As an aside, when defining your own commands for building targets, you
 are strongly encouraged to make use of the predefined compiler 
 and linker flags such as `$(pkgcflags)` etc. described elsewhere.
 
-## <a id='toc-34'></a>Stubs
+## <a id='toc-38'></a>Stubs
 
 TBD - using stubs
 
 TBD - generating stubs
 
-## <a id='toc-35'></a>Versioning
+## <a id='toc-39'></a>Versioning
 
 By default, the nmake build determines the version of the extension by 
 looking for a TEA `configure.in` or `configure.ac` file in extension's 
@@ -829,27 +921,40 @@ with all periods removed.
 
 TBD - Tcl and Tk version macros
 
-## <a id='toc-36'></a>Installation
+## <a id='toc-40'></a>Installation
 
 Installation macros (SCRIPT_INSTALL_DIR etc.)
 
-## <a id='toc-37'></a>Utility macros
+## <a id='toc-41'></a>Manifests
+
+TBD - PRJ_MANIFEST
+
+## <a id='toc-42'></a>Documentation and demos
+
+TBD - default-install-html default-install-man defailt-install-demos
+
+## <a id='toc-43'></a>Utility macros
 
 TBD
 
-## <a id='toc-38'></a>Sanity checking build configuration
+## <a id='toc-44'></a>Sanity checking build configuration
 
 TBD 
 
-# <a id='toc-39'></a>Reference Implementation
+# <a id='toc-45'></a>Reference Implementation
 
 The vc-reform branch in the core.tcl.tk repositories contains work-in-progress.
 
 
 
-# <a id='toc-40'></a>Copyright
+# <a id='toc-46'></a>Copyright
 
 This document has been placed in the public domain.
+
+
+
+
+
 
 
 
