Add information on Microsoft's [https://msdn.microsoft.com/en-us/library/abx4dbyh.aspx|Universal CRT (UCRT)] to the TIP #425 explanation.

--- a/tip/425.md
+++ b/tip/425.md
@@ -44,6 +44,16 @@ providing the panic proc gives the highest chance that panic
 messages arrive in the same runtime as the embedder.
 For tclsh.exe this makes no difference.
 
+Starting with VS2015, Microsoft introduced a new [Universal CRT (UCRT)](https://msdn.microsoft.com/en-us/library/abx4dbyh.aspx),
+which defaults to the standard channels stdin/stdout/stderr
+to be linked in statically. This makes it possible to
+have different dll's (e.g. zlib.dll / tcl87.dll) occupy
+a different C runtime (such as msvcrt.dll), but still
+prevent conflicts in the standard channels. That's
+why it is best to put Tcl\_ConsolePanic\(\) in Tcl's stub
+library, which assures the function to be linked in statically
+into the tclsh executable, in stead of dynamically in tcl87.dll.
+
 # Proposed Change
 
 A new function _Tcl\_ConsolePanic_ is added to the stub library
