--- a/tip/476.md
+++ b/tip/476.md
@@ -1,4 +1,4 @@
-# TIP 476: Scan/Printf format consistancy
+# TIP 476: Scan/Printf format consistency
 	Author: Jan Nijtmans (jan.nijtmans@gmail.com)
 	State: Draft
 	Type: Project
@@ -12,15 +12,15 @@
 # Abstract
 
 The Scan/Printf format handlers are originally derived from the
-C-equivalent scan() and printf() functions. Since ISO C99 there is
-the inttypes.h header file, which defines useful macros. But since
+C-equivalent `scan()` and `printf()` functions. Since ISO C99 there is
+the `inttypes.h` header file, which defines useful macros. But since
 the Tcl implementation was older than that, those macros don't
 play well together with Tcl. This TIP proposes a solution for that.
 
-In addition, this TIP proposes to adapt the %#o modifier such that
+In addition, this TIP proposes to adapt the `%#o` modifier such that
 it produces the "0o" prefix in stead of "o". This is a small step in the
-direction of phasing out octal (TIP #114). Finally this TIP modifiers
-the %#d modifier, such that it only produces a "0d" prefix if that
+direction of phasing out octal (TIP #114). Finally this TIP modifies
+the `%#d` modifier, such that it only produces a "0d" prefix if that
 is needed for correct interpretation of the number when parsing it.
 
 # Rationale
@@ -29,7 +29,7 @@ For an example program containing all situations mentioned here,
 see [main.c](../attach/476/main.c)
 
 First of all, when compiling the example program on 64-bit linux
-(with -DTCL\_WIDE\_INT\_IS\_LONG=1), gcc outputs 5 warnings, 4 of them
+(with `-DTCL\_WIDE\_INT\_IS\_LONG=1`), `gcc` outputs 5 warnings, 4 of them
 are unnecessary:
 
 <pre>
@@ -51,37 +51,37 @@ main.c:99:25: warning: format '%Ld' expects argument of type 'long long int', bu
                          ^~~
 </pre>
 
-The last warning arises because the C printf formatter doesn't handle mp_int types, this warning can be safely ignored.
+The last warning arises because the C printf formatter doesn't handle the `mp_int` types, this warning can be safely ignored.
 
-The other 4 warnings arise because Tcl_WideInt is defined as being the same as long on this sytem. Making it the same as long long fully eliminates those warnings.
+The other 4 warnings arise because `Tcl_WideInt` is defined as being the same as `long` on this sytem. Making it the same as `long long` fully eliminates those warnings.
 
 # Specification
 
 This TIP proposes serveral things:
 
-   *   Whenever possible, typedef Tcl_WideInt to be equal to long long, even
-       on platforms where long has the same size as long long.
+   *   Whenever possible, typedef `Tcl_WideInt` to be equal to `long long`, even
+       on platforms where long has the same size as `long long`.
 
-   *   Document the already existing TCL\_LL\_MODIFIER macro to be equivalent
+   *   Document the already existing `TCL\_LL\_MODIFIER` macro to be equivalent
        to "ll" whenever possible. This is used already to format/scan variables
-       of type Tcl\_WideInt/Tcl\_WideUInt, but now it can be used also for
-       variables of type long long or \_\_int64 (Windows). The obligation to
-       use Tcl\_WideInt/Tcl\_WideUInt in extensions (enforced by compiler
-       warnings) is now gone: "long long" can always be used in stead.
+       of type `Tcl\_WideInt`/`Tcl\_WideUInt`, but now it can be used also for
+       variables of type `long long` or `\_\_int64` (Windows). The obligation to
+       use `Tcl\_WideInt`/`Tcl\_WideUInt` in extensions (enforced by compiler
+       warnings) is now gone: "long long" can always be used instead.
 
-   *   Add a new TCL\_Z\_MODIFIER macro to be equivalent to "z" whenever possible.
-       This can be used to format/scan variables of type size\_t or ptrdiff\_t.
+   *   Add a new `TCL\_Z\_MODIFIER` macro to be equivalent to "z" whenever possible.
+       This can be used to format/scan variables of type `size\_t` or `ptrdiff\_t`.
        If your compiler is ISO C99-compatible, you can use "z" resp "t" instead.
 
    *   Add the "a" and "A" type fields, for formatting floats in hex. Conforming
        to ISO C99, except that the "p" in the output is always lowercase.
 
-   *   Allow macro's from \<inttypes.h\>, such as PRId32 and PRId64, to be used in
-       Tcl\_ObjPrintf(). All that is needed in Tcl is making the format characters
+   *   Allow macro's from `\<inttypes.h\>`, such as `PRId32` and `PRId64`, to be used in
+       `Tcl\_ObjPrintf()`. All that is needed in Tcl is making the format characters
        mean _exactly_ the same as they do in C. See: <https://en.wikipedia.org/wiki/Printf_format_string>
        Missing were the "t", "z" and "j" modifier (unknown to MSVC as well), and "q"
        for BSD platforms. For windows, "I", "I32" and "I64" are needed. With those
-       additions, the Tcl handling of the \<inttypes.h\> macros is fully ISO C99
+       additions, the Tcl handling of the `\<inttypes.h\>` macros is fully ISO C99
        compatible, even on platforms which don't have an ISO C99
        conformant printf.
 
@@ -96,22 +96,22 @@ This TIP proposes serveral things:
        format handles don't handle mp\_int types, this will result in a gcc warning,
        which can be safely ignored.
 
-   *   Adapt the %#x and %#X modifier, such that the "x" in the output is always lowercase.
-       If the formatted number is 0, no "0x" prefix is produced.
+   *   Adapt the `%#x` and `%#X` modifiers, such that the "x" in the output is always lowercase.
+       If the formatted number is `0`, no "0x" prefix is produced.
 
-   *   Adapt the %#o modifier to use "0o" as octal prefix in stead of "0".
+   *   Adapt the `%#o` modifier to use "0o" as octal prefix in stead of "0".
        This prefix is only produced when the formatted number is not 0,
        i.e. when there is possible confusion with a decimal number.
 
-   *   Adapt the %#d modifier. The prefix "0d" is only produced when there is
-       a width field and the formatted number is not 0, i.e. when there is
+   *   Adapt the `%#d` modifier. The prefix "0d" is only produced when there is
+       a width field and the formatted number is not `0`, i.e. when there is
        possible confusion with an octal number. Since in Tcl 9.0 octal numbers
        with "0" prefix will be gone, "#" will not produce the decimal prefix any more.
 
 # Considerations regarding the incompatibility
 
 This change is almost fully upwards compatible. As long as Tcl extensions use the
-Tcl\_WideInt/Tcl\_WideUInt data types (in stead of long long or \_\_int64),
+`Tcl\_WideInt`/`Tcl\_WideUInt` data types (in stead of `long long` or `\_\_int64`),
 everything works as before.
 
 In some situations, "format" doesn't produce the exact same output as Tcl 8.6
