--- a/tip/476.md
+++ b/tip/476.md
@@ -29,7 +29,7 @@ For an example program containing all situations mentioned here,
 see [main.c](../attach/476/main.c)
 
 First of all, when compiling the example program on 64-bit linux
-(with `-DTCL\_WIDE\_INT\_IS\_LONG=1`), `gcc` outputs 5 warnings, 4 of them
+(with `-DTCL_WIDE_INT_IS_LONG=1`), `gcc` outputs 5 warnings, 4 of them
 are unnecessary:
 
 <pre>
@@ -62,26 +62,26 @@ This TIP proposes serveral things:
    *   Whenever possible, typedef `Tcl_WideInt` to be equal to `long long`, even
        on platforms where long has the same size as `long long`.
 
-   *   Document the already existing `TCL\_LL\_MODIFIER` macro to be equivalent
+   *   Document the already existing `TCL_LL_MODIFIER` macro to be equivalent
        to "ll" whenever possible. This is used already to format/scan variables
-       of type `Tcl\_WideInt`/`Tcl\_WideUInt`, but now it can be used also for
-       variables of type `long long` or `\_\_int64` (Windows). The obligation to
-       use `Tcl\_WideInt`/`Tcl\_WideUInt` in extensions (enforced by compiler
+       of type `Tcl_WideInt`/`Tcl_WideUInt`, but now it can be used also for
+       variables of type `long long` or `__int64` (Windows). The obligation to
+       use `Tcl_WideInt`/`Tcl_WideUInt` in extensions (enforced by compiler
        warnings) is now gone: "long long" can always be used instead.
 
-   *   Add a new `TCL\_Z\_MODIFIER` macro to be equivalent to "z" whenever possible.
-       This can be used to format/scan variables of type `size\_t` or `ptrdiff\_t`.
+   *   Add a new `TCL_Z_MODIFIER` macro to be equivalent to "z" whenever possible.
+       This can be used to format/scan variables of type `size_t` or `ptrdiff_t`.
        If your compiler is ISO C99-compatible, you can use "z" resp "t" instead.
 
    *   Add the "a" and "A" type fields, for formatting floats in hex. Conforming
        to ISO C99, except that the "p" in the output is always lowercase.
 
-   *   Allow macro's from `\<inttypes.h\>`, such as `PRId32` and `PRId64`, to be used in
-       `Tcl\_ObjPrintf()`. All that is needed in Tcl is making the format characters
+   *   Allow macro's from `<inttypes.h>`, such as `PRId32` and `PRId64`, to be used in
+       `Tcl_ObjPrintf()`. All that is needed in Tcl is making the format characters
        mean _exactly_ the same as they do in C. See: <https://en.wikipedia.org/wiki/Printf_format_string>
        Missing were the "t", "z" and "j" modifier (unknown to MSVC as well), and "q"
        for BSD platforms. For windows, "I", "I32" and "I64" are needed. With those
-       additions, the Tcl handling of the `\<inttypes.h\>` macros is fully ISO C99
+       additions, the Tcl handling of the `<inttypes.h>` macros is fully ISO C99
        compatible, even on platforms which don't have an ISO C99
        conformant printf.
 
@@ -91,9 +91,9 @@ This TIP proposes serveral things:
    *   Add a new "L" length modifier. When used in combination with "f" or "g",
        it allows long doubles to be formatted. Since Tcl doesn't handle long doubles
        internally, it is converted to a normal double internally first.
-       For integers, "L" indicates that the value to be formatted is of type mp_int,
+       For integers, "L" indicates that the value to be formatted is of type `mp_int`,
        the function expect a pointer to it as argument. Since standard C printf
-       format handles don't handle mp\_int types, this will result in a gcc warning,
+       format handles don't handle `mp_int` types, this will result in a gcc warning,
        which can be safely ignored.
 
    *   Adapt the `%#x` and `%#X` modifiers, such that the "x" in the output is always lowercase.
@@ -111,7 +111,7 @@ This TIP proposes serveral things:
 # Considerations regarding the incompatibility
 
 This change is almost fully upwards compatible. As long as Tcl extensions use the
-`Tcl\_WideInt`/`Tcl\_WideUInt` data types (in stead of `long long` or `\_\_int64`),
+`Tcl_WideInt`/`Tcl_WideUInt` data types (in stead of `long long` or `__int64`),
 everything works as before.
 
 In some situations, "format" doesn't produce the exact same output as Tcl 8.6
