Update to tip 479. Eliminating the upvar mechanism from the spec and implementation.

--- a/tip/479.md
+++ b/tip/479.md
@@ -41,14 +41,13 @@ incoming value (or lack of value.)
 
 Named parameters are designed to be deliverable in any order. Named parameters
 can also be omitted. As such it is necessary to provide more introspection than the
-current incarnation of **proc** provides. To that end, a local variable called **@args**
-will be populated with the actual arguments fed into the call. If the procedure requires
+current incarnation of **proc** provides. If the procedure requires
 more than the default behavior or populating local variables with the argumemnt given,
-it can introspect with **@args** with **\[dict exists\]** to detect if an argument was
+it can introspect with **$args** with **\[dict exists\]** to detect if an argument was
 given at all. The argument spec that was given by the developer will also be available
 as the local variable **@spec**.
 
-		% @proc p {a {default {}}} { return $@args }
+		% @proc p {a {default {}}} { return $args }
 		% p
 		a {}
 		% p foo bar
@@ -61,9 +60,9 @@ does not provide one.
 		% @proc q {a {default {}} b {}} {
 		  # Proc assumes b will be given
 		  set result [list $a $b]
-		  foreach {f v} $@args {
-		    if {$item ni [dict keys $@spec]} {
-		       lappend result $item [dict get $@args $item]
+		  foreach {f v} $args {
+		    if {$item ni [dict keys ${@spec}]} {
+		       lappend result $item [dict get $args $item]
 		    }
 		  }
 		}
@@ -86,17 +85,14 @@ a named parameter.
 1. If a value for any option is given as an empty string, it is inferred to be null.
 2. The value for the *variable* option will be the name of the parameter unless set.
 3. A field that is given, but not otherwise reserved by the spec, is ignored by the parser but made available for introspection via the **@spec** dictionary.
-4. A field name that begins with a carrot \^ will assume the options of **upvar** = **$variable** and **level** = 1.
-5. If the same option is given multiple times, the last value is the one that will be used. (Similar to \[dict merge\]).
+4. If the same option is given multiple times, the last value is the one that will be used. (Similar to \[dict merge\]).
 
 ### variable
 Type: Variable name
 Default: null
 
 If given, instead of creating a local variable matching the name of the named parameter,
-create a variable named **$variable** containing the value provided in the call. When
-combined with **upvar**, this is simply the local name of the variable mapped from the caller.
-
+create a variable named **$variable** containing the value provided in the call.
 Example:
 
 		% @proc u {
@@ -109,15 +105,13 @@ Example:
 Type: boolean
 Default: true
 
-Set to false if **default** given or **upvar** is non-null. If true, throw an error
-if the named parameter is not given.
+Set to false if **default** given. If true, throw an error if the named parameter is not given.
 
 ### default
 Type: value
 Default: null
 
 When non-null, if a named parameter is missing from the call assume the value specified.
-Ignored if **upvar** is non-null.
 
 Example:
 
@@ -159,46 +153,6 @@ Example:
 		> {Less usefull} {a {Less usefull} alpha {Less usefull}}
 		% u a {Don't be pedantic} alpha {Less usefull}
 		> {Don't be pedanditic} {a {Don't be pedantic} alpha {Less usefull}}
-
-### upvar
-Type: Variable name
-Default: null
-
-If non-null, a variable name in the caller to map this named parameter to. This is equivilent to
-calling **\[upvar $level $upvar $variable\]**. If a value is given for the named parameter
-it is assumed to be a replacement for the **upvar** option.
-
-		% @proc u {
-		  a {
-		    default {A useful value}
-		    aliases {alpha A}
-		  }
-		  b {
-		    upvar beta
-		  }
-		} {
-		  incr b
-		  puts [list $a $b $@args]
-		}
-		% set b 0
-		% u
-		> {A useful value} 1 {}
-		% u a {five}
-		> {five} 2 {a five}
-		% set c 100
-		% u b c
-		> {A useful value} 101 {b c}
-		% set b
-		> 2
-		% set c
-		> 101
-
-### level
-Type: Integer
-Default: 1
-
-When upvar option is used, this option sets at what level the external variable will be
-mapped.
 
 # Option - Backfit into the existing **proc** command
 
