Updating the spec to match the implementation. Elimated the @args variable, we can do everything we need with the existing $args variable.

--- a/tip/479.md
+++ b/tip/479.md
@@ -143,7 +143,7 @@ Example:
 		    aliases {alpha A}
 		  }
 		} {
-		  puts [list $a $@args]
+		  puts [list $a $args]
 		}
 		% u
 		> {A useful value} {}
@@ -156,15 +156,14 @@ Example:
 
 # Option - Backfit into the existing **proc** command
 
-Because named **@args** need to follow positional arguments, it is possible to backfit this
-technique into the existing proc command by implementing an alternative to the **args**
-facility. Tentative called **@args**
+Because named **args** need to follow positional arguments, it is possible to backfit this
+technique into the existing proc command by modifying to the **args** facility to accept an argspec.
 
-		% proc p {{a {}} {@args}} { return [list a $a {*}$@args] }
+		% proc p {{a {}} {args {b {default {}}}}} { return [list a: $a b: $b {*}$args] }
 		% p
-		a {}
+		a: {} b: {}
 		% p foo bar
-		a {} foo bar
+		a: {} b: {} foo bar
 
 # Implementation
 
@@ -205,4 +204,4 @@ For TclOO, The **@method** method in TclOO will also populate this data structur
 
 At stage 4 we will modify the **proc** command behavior and **::oo::class method** behavior.
 To do this we will modify the TclCreateCommand() function to populate the named arguments data structure
-in cases where the final argument is **@args**.
+in cases where the final argument is **args** with an argspec.
