Update TIP #421 with a new content from Brad Lanam

--- a/tip/421.md
+++ b/tip/421.md
@@ -3,10 +3,12 @@
 	Type:		Project
 	Tcl-Version:	8.7
 	Vote:		Pending
-	Post-History:	
+	Post-History:
 	Author:		Karl Lehenbauer <karllehenbauer@gmail.com>
+	Author:		Brad Lanam <brad.lanam.comp@gmail.com>
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	28-Nov-2012
+        Updated:        2017-10-24
 -----
 
 # Abstract
@@ -40,9 +42,9 @@ for efficient iteration over an array's elements.
 
 # Proposed Change
 
-There should be a new command, **array foreach**, that has this syntax:
+There should be a new command, **array for**, that has this syntax:
 
- > **array** **foreach** _arrayName_ \{_keyVar_ _valueVar_\} _body_
+ > **array** **for** \{_keyVar_ _valueVar_\} _arrayName_ _body_
 
 This will iterate internally over the elements of the array called
 _arrayName_ in array-iteration order \(i.e., the same as that used by the
@@ -54,7 +56,18 @@ will have their normal interpretation as loop control operations.
 
 # Implementation
 
-Not yet...
+  Branch: bll-array-for
+
+  Code is also available within a comment at:
+     https://github.com/flightaware/Tcl-bounties/issues/12
+
+  The implementation is no faster then using **array names** or
+  **array get**, but uses much less memory.
+
+# References
+
+  https://github.com/flightaware/Tcl-bounties/issues/12
+  https://github.com/flightaware/Tcl-bounties/issues/27
 
 # Copyright
 
