Adding performance report to tip479

--- a/tip/479.md
+++ b/tip/479.md
@@ -169,7 +169,7 @@ technique into the existing proc command by modifying to the **args** facility t
 
 This TIP will be rolled out in 3 stages.
 
-## Stage 1 - Pure Tcl
+## Stage 1 - Pure Tcl (finished)
 
 Stage 1 is a pure-tcl implementation to allow the community to try out the rules and
 see if this new concept is a good fit for Tcl. The implementation will use a macro-like
@@ -180,12 +180,20 @@ the new features without introducing a major impact on performance.
 This implementation has been posted to the http://wiki.tcl.tk/49071 and will be kept up
 to date.
 
-## State 2 - C Extension
+## State 2 - C Extension (finished)
 
 Stage 2 will be a standalone TEA extension compatible with Tcl 8.6. In this implementation
 a C API call will create a command **@args** which will take as input the parameter specs
 for the proc and the value of the args variable. The @args command will then provide the
 local variables for this tip's rules prior to passing control to the user's body.
+
+To build the extension:
+
+      mkdir tip479
+      cd tip479
+      fossil clone http://fossil.etoyoc.com/fossil/tip479 tip479.fossil
+      fossil open tip479.fossil
+      tclsh make.tcl all
 
 ## State 3 - Core patch
 
@@ -205,3 +213,18 @@ For TclOO, The **@method** method in TclOO will also populate this data structur
 At stage 4 we will modify the **proc** command behavior and **::oo::class method** behavior.
 To do this we will modify the TclCreateCommand() function to populate the named arguments data structure
 in cases where the final argument is **args** with an argspec.
+
+# Performance
+
+Included in the file distribution is a test script which produces performance metrics.
+The most up to date metrics are posted to:
+
+<http://fossil.etoyoc.com/fossil/tip479/doc/trunk/performance.txt>
+
+Long story short, for the C implementation, processing arguments using the @args mechanic is faster
+than performing \[dict with args {}\].
+
+The code to produces the benchmarks is included in the code repository:
+
+<http://fossil.etoyoc.com/fossil/tip479/doc/trunk/tests.tcl>
+>
