TIP 480: fix typo, upvar s/b uplevel

--- a/tip/480.md
+++ b/tip/480.md
@@ -76,7 +76,7 @@ types and alias relationships would have multiple advantages:
    Turing-complete in general. Unexpected aliases can be created
    at points in the program far remote from a procedure. Code like
 
-        upvar #0 {upvar 0 ::path::to::variable ::some::other::thing}
+        uplevel #0 {upvar 0 ::path::to::variable ::some::other::thing}
 
    will create an alias without any procedure accessing one or another
    of the variables being any the wiser.
