Tweak to tip#479, add a "type" field to forward support tip#480

--- a/tip/479.md
+++ b/tip/479.md
@@ -154,6 +154,14 @@ Example:
 		% u a {Don't be pedantic} alpha {Less usefull}
 		> {Don't be pedanditic} {a {Don't be pedantic} alpha {Less usefull}}
 
+### type
+Type: string
+Default: null
+Options: null, boolean, integer, wide, entier, double
+
+To support [tip#480](https://core.tcl.tk/tips/doc/trunk/tip/480.md). For now strictly advisory.
+In the future this will check that the incoming values are the specified type.
+
 # Option - Backfit into the existing **proc** command
 
 Because named **args** need to follow positional arguments, it is possible to backfit this
@@ -222,9 +230,65 @@ The most up to date metrics are posted to:
 <http://fossil.etoyoc.com/fossil/tip479/doc/trunk/performance.txt>
 
 Long story short, for the C implementation, processing arguments using the @args mechanic is faster
-than performing \[dict with args {}\].
+than performing \[dict with args {}\]. An equivilent proc with positional arguments is still
+slightly faster.
 
 The code to produces the benchmarks is included in the code repository:
 
 <http://fossil.etoyoc.com/fossil/tip479/doc/trunk/tests.tcl>
->
+
+# Extras
+
+While this tip addresses the design patterns of proc definitions.
+
+## Arguments for ensemble-like procs
+
+The @args command is available for use at any place within Tcl, not just at the top
+of a command. Consider:
+
+    proc myensemble {command args} {
+      switch $command {
+        smtp {
+           # Dicts can be created on the fly
+           @args [dict create from {} to {} mtime [dict create default [clock seconds]]] $args
+           smtp::dispatch $from $do mtime $mtime
+         }
+         http {
+           # Or accept a static string with whitespace
+           @args {
+              from {}
+              to {}
+              url {default http://mydomain.info}
+           } $args
+           http::post ${url}?from=${from}&to=${to}
+         }
+      }
+    }
+
+## Extra Metadata for argument handling
+
+The standard only defines the behavior for several properties for parameters, but
+does not prohibit storing additional properties. Consider:
+
+    @proc prettyproc {
+      color {
+        comment {Color of the button}
+        type color
+        default green
+      }
+      flavor {
+        comment {What flavor candy emerges when pressed.}
+        default random
+        options {vanilla caramel chocolate strawberry}
+      }
+    } {
+       set flavors  [dict get ${@spec} flavor options]
+       if {$flavor eq "random"} {
+         set flavor [lrandom $flavors]
+       } else {
+         if {$flavor ni $flavors} {
+            error "Invalid flavor $flavor. Valid: random OR $flavors"
+         }
+      }
+    }
+
